spacing fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1473,7 +1473,8 @@ a.box-feed:active {
   flex-wrap: wrap;
   justify-content: flex-start; }
   .tags .tag {
-    margin-bottom: 0.5rem; }
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem; }
     .tags .tag:not(:last-child) {
       margin-right: 0.5rem; }
   .tags:last-child {
